--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "studio": "bunx prisma studio"
   },
   "devDependencies": {
-    "bun-types": "^1.0.7"
+    "bun-types": "^1.0.11"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "prisma": "^5.5.2"
   },
   "dependencies": {
     "@graphql-tools/load-files": "^7.0.0",
     "@prisma/client": "^5.5.2",
     "graphql": "^16.8.1",
-    "graphql-yoga": "^5.0.0",
-    "prisma": "^5.5.2"
+    "graphql-constraint-directive": "^5.3.0",
+    "graphql-yoga": "^5.0.0"
   }
 }
