codegen and jwt integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "utils": ["./utils"],
       "@constants": ["./constants"],
       "middlewares": ["./middlewares"],
+      "services": ["./services"],
       "dtos": ["./grahpql/dtos"],
       "subscribers": ["./subscribers"]
     }
