--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "studio": "bunx prisma studio"
   },
   "devDependencies": {
+    "@eddeee888/gcg-typescript-resolver-files": "^0.7.1",
+    "@graphql-codegen/cli": "^5.0.0",
     "bun-types": "^1.0.11"
   },
   "peerDependencies": {
@@ -17,9 +19,13 @@
   },
   "dependencies": {
     "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-yoga/plugin-jwt": "^2.0.0",
     "@prisma/client": "^5.5.2",
     "graphql": "^16.8.1",
     "graphql-constraint-directive": "^5.3.0",
-    "graphql-yoga": "^5.0.0"
+    "graphql-yoga": "^5.0.0",
+    "inversify": "^6.0.2",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   }
 }
