--- a/package.json
+++ b/package.json
@@ -1,33 +1,78 @@
 {
-  "name": "dakiyacourierserver",
-  "module": "src/server/main.ts",
-  "type": "module",
+  "name": "DakiyaCourierServer",
+  "version": "1.0",
+  "description": "Dakiya node js server",
   "scripts": {
-    "dev": "bun --hot run src/server/main.ts",
-    "devw": "bun --watch run src/server/main.ts",
-    "dev-inspect": "bun --inspect-brk run src/server/main.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "check:types": "tsc --noEmit",
+    "build": "tsc && tsc-alias",
+    "build-i": "npm i && tsc && tsc-alias",
+    "build:docker:prod": "docker build . -t my-fastify-app --build-arg APP_ENV=production",
+    "start": "node build/app",
+    "dev": "nodemon | pino-pretty --colorize",
+    "dev-inspect": "npm run build && node --inspect build/app",
+    "pretest": "npm run build",
     "generate": "bunx prisma generate",
-    "studio": "bunx prisma studio"
+    "studio": "bunx prisma studio",
+    "test": "NODE_ENV=test tap",
+    "test:watch": "NODE_ENV=test tap -w"
   },
-  "devDependencies": {
-    "@eddeee888/gcg-typescript-resolver-files": "^0.7.1",
-    "@graphql-codegen/cli": "^5.0.0",
-    "bun-types": "^1.0.11"
+  "engines": {
+    "node": ">=16.0.0"
   },
+  "keywords": [
+    "nodejs",
+    "fastify",
+    "typescript"
+  ],
   "peerDependencies": {
-    "typescript": "^5.0.0",
-    "prisma": "^5.5.2"
+    "graphql": "^16.8.1"
+  },
+  "author": "Nitesh Bhardwaj",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",    "@types/node": "^20.9.2",
+    "@types/node-fetch": "^3.0.3",
+    "@types/tap": "^15.0.11",
+    "@types/validator": "^13.11.6",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.3",
+    "prettier": "^3.1.0",
+    "tap": "^18.6.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "tsc-alias": "^1.8.8"
   },
   "dependencies": {
-    "@graphql-tools/load-files": "^7.0.0",
-    "@graphql-yoga/plugin-jwt": "^2.0.0",
-    "@prisma/client": "^5.5.2",
-    "graphql": "^16.8.1",
-    "graphql-constraint-directive": "^5.3.0",
-    "graphql-yoga": "^5.0.0",
-    "inversify": "^6.0.2",
+    "@apollo/server": "^4.9.5",
+    "@as-integrations/fastify": "^2.1.1",
+    "@sinclair/typebox": "^0.31.26",    
+    "ajv": "^8.12.0",    
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "env-schema": "^5.2.1",
+    "event-dispatch": "^0.4.1",
+    "fastify": "^4.24.3",
+    "fastify-cookie": "^5.7.0",
+    "fastify-now": "^3.1.0",
+    "fastify-plugin": "^4.5.1",
+    "graphql": "^16.8.1",    "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
+    "node-fetch": "2.6.7",
+    "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "type-graphql": "2.0.0-beta.3",
+    "typedi": "^0.10.0",
+    "validator": "^13.11.0",
+    "winston": "^3.11.0",
+    "@prisma/client": "^5.6.0",
+    "prisma": "^5.6.0"
   }
 }
