--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ API_PORT=5050
 DATABASE_URL=mongodb+srv://nitesh9313:jf38j2JmkIpXWmSj@cluster0.6ash1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SMS_API_KEY=7NKe8fOXeWo-MhVfLl9fY09o1XvDp6Rhg8Mu8Z1N6E
 
+MAILER_EMAIL=niteshbhardwaj9313@gmail.com
+MAILER_PASSWORD=vgkvczgbshhqorag
 # Redis localhost connection details
 # REDIS_HOST=127.0.0.1
 # REDIS_PORT=32768
