--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "nodemon | pino-pretty --colorize",
     "dev-inspect": "npm run build && node --inspect build/app",
     "pretest": "npm run build",
-    "generate": "bunx prisma generate",
-    "studio": "bunx prisma studio",
+    "generate": "npx prisma generate",
+    "studio": "npx prisma studio",
     "test": "NODE_ENV=test tap",
     "test:watch": "NODE_ENV=test tap -w"
   },
@@ -30,7 +30,8 @@
   },
   "author": "Nitesh Bhardwaj",
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.5",    "@types/node": "^20.9.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.9.2",
     "@types/node-fetch": "^3.0.3",
     "@types/tap": "^15.0.11",
     "@types/validator": "^13.11.6",
@@ -52,8 +53,11 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@as-integrations/fastify": "^2.1.1",
-    "@sinclair/typebox": "^0.31.26",    
-    "ajv": "^8.12.0",    
+    "@prisma/client": "^5.6.0",
+    "@sinclair/typebox": "^0.31.26",
+    "@types/nodemailer": "^6.4.14",
+    "ajv": "^8.12.0",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "env-schema": "^5.2.1",
@@ -62,16 +66,17 @@
     "fastify-cookie": "^5.7.0",
     "fastify-now": "^3.1.0",
     "fastify-plugin": "^4.5.1",
-    "graphql": "^16.8.1",    "jsonwebtoken": "^9.0.2",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
     "node-fetch": "2.6.7",
+    "nodemailer": "^6.9.7",
     "otp-generator": "^4.0.1",
+    "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "2.0.0-beta.3",
     "typedi": "^0.10.0",
     "validator": "^13.11.0",
-    "winston": "^3.11.0",
-    "@prisma/client": "^5.6.0",
-    "prisma": "^5.6.0"
+    "winston": "^3.11.0"
   }
 }
