--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ WIN_LOG_LEVEL=silly
 
 API_HOST=0.0.0.0
 API_PORT=5050
-DATABASE_URL=mongodb+srv://nitesh9313:jf38j2JmkIpXWmSj@cluster0.6ash1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://nitesh9313:jf38j2JmkIpXWmSj@cluster0.6ash1.mongodb.net/DakiyaCourierDB?retryWrites=true&w=majority
 SMS_API_KEY=7NKe8fOXeWo-MhVfLl9fY09o1XvDp6Rhg8Mu8Z1N6E
+KYC_API_KEY=123
 
 MAILER_EMAIL=niteshbhardwaj9313@gmail.com
 MAILER_PASSWORD=vgkvczgbshhqorag
