--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -20,3 +21,5 @@ production.env
 
 package-lock.json
 pnpm-lock.yaml
+
+.env
