git updated kyc verification screens

--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "prettier": "^3.1.0",
     "tap": "^18.6.1",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "tsc-alias": "^1.8.8"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
@@ -68,6 +68,7 @@
     "fastify-now": "^3.1.0",
     "fastify-plugin": "^4.5.1",
     "graphql": "^16.8.1",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
     "nodemailer": "^6.9.7",
