--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,10 @@
       "@interfaces/*": ["interfaces/*"],
       "@plugins/*": ["plugins/*"],
       "@models/*": ["models/*"],
-      "@graphql/*": ["graphql/*"],
-      "@typedefs/*": ["graphql/typedefs/*"],
-      "@resolvers/*": ["graphql/resolvers/*"],
-      "@input/*": ["graphql/args/*"],
+      "@graphql/*": ["graphql-type/*"],
+      "@typedefs/*": ["graphql-type/typedefs/*"],
+      "@resolvers/*": ["graphql-type/resolvers/*"],
+      "@input/*": ["graphql-type/args/*"],
       "@subscribers/*": ["subscribers/*"],
       "@decorators/*": ["decorators/*"],
       "@exceptions/*": ["exceptions/*"],
