--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "fastify-plugin": "^4.5.1",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
+    "jsonata": "^2.0.4",
     "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
     "nodemailer": "^6.9.7",
