update schema, pincode load

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev-inspect": "npm run build && node --inspect build/app",
     "pretest": "npm run build",
     "generate": "npx prisma generate",
+    "seed": "npx prisma db seed",
     "studio": "npx prisma studio --port 5000 --browser none",
     "rebuild-bcrypt": "npm rebuild bcrypt",
     "test": "NODE_ENV=test tap",
@@ -53,6 +54,7 @@
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.3",
     "prettier": "^3.1.0",
+    "prisma": "^5.10.2",
     "tap": "^18.6.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.8",
@@ -63,7 +65,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "@as-integrations/fastify": "^2.1.1",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.10.2",
     "@sinclair/typebox": "^0.31.26",
     "@types/nodemailer": "^6.4.14",
     "ajv": "^8.12.0",
@@ -83,7 +85,6 @@
     "keygen": "^0.4.0",
     "nodemailer": "^6.9.7",
     "otp-generator": "^4.0.1",
-    "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "2.0.0-beta.3",
     "typedi": "^0.10.0",
