--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-i": "npm install && npm run generate && tsc && tsc-alias",
     "build:docker:prod": "docker build . -t my-fastify-app --build-arg APP_ENV=production",
     "start": "node build/app",
-    "dev": "nodemon | pino-pretty --colorize",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/app.ts",
+    "bun-dev": "bun --watch src/app.ts",
     "dev-inspect": "npm run build && node --inspect build/app",
     "pretest": "npm run build",
     "generate": "npx prisma format && npx prisma generate",
@@ -51,12 +52,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^9.0.11",
-    "nodemon": "^3.0.1",
     "pino-pretty": "^10.2.3",
     "prettier": "^3.1.0",
     "prisma": "^5.10.2",
     "tap": "^18.6.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
