--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "env-schema": "^5.2.1",
     "event-dispatch": "^0.4.1",
@@ -85,6 +86,7 @@
     "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
     "nodemailer": "^6.9.7",
+    "numeral": "^2.0.6",
     "otp-generator": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "2.0.0-beta.3",
