--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "build-i": "npm install && npm run generate && tsc && tsc-alias",
     "build:docker:prod": "docker build . -t my-fastify-app --build-arg APP_ENV=production",
     "start": "node build/app",
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/app.ts",
-    "bun-dev": "bun --watch src/app.ts",
-    "dev-inspect": "npm run build && node --inspect build/app",
+    "dev": "bun --watch src/app.ts",
+    "devi": "bun --watch --inspect src/app.ts",
     "pretest": "npm run build",
     "generate": "bunx prisma format && npx prisma generate",
     "seed": "bunx prisma db seed",
