updated script using bun

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint:fix": "eslint . --fix",
     "check:types": "tsc --noEmit",
     "build": "tsc && tsc-alias",
-    "build-i": "npm install && npm run generate && tsc && tsc-alias",
+    "build-i": "npm install -g bun && bun install && bun run generate",
     "build:docker:prod": "docker build . -t my-fastify-app --build-arg APP_ENV=production",
-    "start": "node build/app",
+    "start": "bun src/app.ts",
     "dev": "bun --watch src/app.ts",
     "devi": "bun --watch --inspect src/app.ts",
     "pretest": "npm run build",
