--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,10 @@
     "importHelpers": true,
     "strictPropertyInitialization": false,
     "paths": {
-      "@/*": ["*"],
-      "@typedefs/*": ["graphql-type/typedefs/*"],
-      "@resolvers/*": ["graphql-type/resolvers/*"],
-      "@input/*": ["graphql-type/args/*"],
+      "~/*": ["*"],
+      "~typedefs/*": ["graphql-type/typedefs/*"],
+      "~resolvers/*": ["graphql-type/resolvers/*"],
+      "~input/*": ["graphql-type/args/*"],
     }
   },
   "ts-node": {
