--- a/.env.ref
+++ b/.env.ref
@@ -2,8 +2,8 @@ NODE_ENV=development
 LOG_LEVEL=debug
 WIN_LOG_LEVEL=silly
 
-API_HOST=0.0.0.0
-API_PORT=5050
+HOST=0.0.0.0
+PORT=5050
 DATABASE_URL=
 SMS_API_KEY=
 KYC_API_KEY=
