--- a/package.json
+++ b/package.json
@@ -40,39 +40,39 @@
   },
   "author": "Nitesh Bhardwaj",
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.9.2",
     "@types/node-fetch": "^3.0.3",
     "@types/tap": "^15.0.11",
-    "@types/validator": "^13.11.6",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@types/validator": "^13.11.10",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@types/nodemailer": "^6.4.15",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
-    "pino-pretty": "^10.2.3",
-    "prettier": "^3.1.0",
-    "prisma": "^5.10.2",
-    "tap": "^18.6.1",
-    "ts-node": "^10.9.1",
+    "pino-pretty": "^10.3.1",
+    "prettier": "^3.2.5",
+    "prisma": "^5.14.0",
+    "tap": "^18.8.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsc-alias": "^1.8.8",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.5",
+    "@apollo/server": "^4.10.4",
     "@as-integrations/fastify": "^2.1.1",
     "@paljs/plugins": "^6.0.7",
-    "@prisma/client": "^5.10.2",
-    "@sinclair/typebox": "^0.31.26",
-    "@types/nodemailer": "^6.4.14",
-    "ajv": "^8.12.0",
+    "@prisma/client": "^5.14.0",
+    "@sinclair/typebox": "^0.32.31",
+    "ajv": "^8.14.0",
     "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.0",
-    "dayjs": "^1.11.10",
+    "class-validator": "^0.14.1",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.3.1",
     "env-schema": "^5.2.1",
     "event-dispatch": "^0.4.1",
@@ -82,17 +82,17 @@
     "fastify-plugin": "^4.5.1",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
-    "jsonata": "^2.0.4",
+    "jsonata": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
     "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.13",
     "numeral": "^2.0.6",
     "otp-generator": "^4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "2.0.0-beta.3",
+    "reflect-metadata": "^0.1.14",
+    "type-graphql": "2.0.0-rc.1",
     "typedi": "^0.10.0",
-    "validator": "^13.11.0",
-    "winston": "^3.11.0"
+    "validator": "^13.12.0",
+    "winston": "^3.13.0"
   }
 }
