--- a/.github/workflows/azure-dev_dakiya-test.yml
+++ b/.github/workflows/azure-dev_dakiya-test.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - dakiya-test
+name: Build and deploy Bun app to Azure Web App - dakiya-test
 
 on:
   push:
@@ -15,7 +15,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Bun version
       - uses: oven-sh/setup-bun@v1
         with:
