--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check:types": "tsc --noEmit",
     "build": "tsc && tsc-alias",
     "build-i": "npm install -g bun@latest && bun install && bun run generate",
-    "build:docker:prod": "docker build . -t my-fastify-app --build-arg APP_ENV=production",
+    "build:docker:prod": "docker build . -t dakiya-server --build-arg APP_ENV=production",
     "start": "bun build/src/app.js",
     "dev": "bun --watch src/app.ts",
     "devi": "bun --watch --inspect src/app.ts",
@@ -26,8 +26,8 @@
     "node": ">=18.0.0"
   },
   "keywords": [
-    "nodejs",
-    "fastify",
+    "bun",
+    "hono",
     "typescript"
   ],
   "husky": {
@@ -65,7 +65,6 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "@as-integrations/fastify": "^2.1.1",
     "@paljs/plugins": "^6.0.7",
     "@prisma/client": "^5.14.0",
     "@sinclair/typebox": "^0.32.31",
@@ -76,12 +75,9 @@
     "dotenv": "^16.3.1",
     "env-schema": "^5.2.1",
     "event-dispatch": "^0.4.1",
-    "fastify": "^4.24.3",
-    "fastify-cookie": "^5.7.0",
-    "fastify-now": "^3.1.0",
-    "fastify-plugin": "^4.5.1",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
+    "hono": "^4.4.3",
     "jsonata": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "keygen": "^0.4.0",
